"nonsense welcome post"

--- a/app/views/lol/welcome.html.erb
+++ b/app/views/lol/welcome.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome to America! When are you leaving?</h1>
-<span style="float:right">-Yoshiki</span>
+<div style="width:500px"><h1>Test post please ignore</h1>
+<span style="float:right">-Yoshiki</span></div>
